# Project_Arbeit

./: README.md
WIR/: AUTHORS  COPYING  Makefile.am  Makefile.in  Makefile.svn  NEWS  README  Releases  aclocal.m4  config_wir.h.in  configure  configure.ac
WIR/DEBUGMACRO_CONF/: wir.conf.bak
WIR/analyses/: Makefile.src  README
WIR/analyses/availabledefinitions/: Makefile.src  wiravailabledefinitionsanalysis.cc  wiravailabledefinitionsanalysis.h
WIR/analyses/bit/: Makefile.src  wirbitdfa.cc  wirbitdfa.h  wirdfg.cc  wirdfg.h  wirdfgedgeproperty.cc  wirdfgedgeproperty.h  wirdfgnodeproperty.cc  wirdfgnodeproperty.h  wirl4.cc  wirl4.h  wirlocation.cc  wirlocation.h  wirupdownvalue.cc  wirupdownvalue.h
WIR/analyses/controlflow/: Makefile.src  wircfg.cc  wircfg.h  wircfganalysis.cc  wircfganalysis.h  wircfgedgeproperty.h  wircfgnodeproperty.cc  wircfgnodeproperty.h
WIR/analyses/domination/: Makefile.src  wirdominationanalysis.cc  wirdominationanalysis.h
WIR/analyses/duudchain/: Makefile.src  wirduudchainanalysis.cc  wirduudchainanalysis.h
WIR/analyses/generic/: Makefile.src  safeint.h  wiranalysis.cc  wiranalysis.h  wirbitvector.h  wirinterval.h  wirintervalset.h  (+2 more)
WIR/arch/: Makefile.am  Makefile.in  Makefile.src  README
WIR/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
WIR/containers/: Makefile.src  wiravailabledefinitions.cc  wiravailabledefinitions.h  wirbitvalues.cc  wirbitvalues.h  wirbreak.cc  wirbreak.h  wircomment.cc  wircomment.h  wircontroltree.cc  wircontroltree.h  wirdataaccess.cc  wirdataaccess.h  wirdomination.cc  wirdomination.h  wirduudchain.cc  wirduudchain.h  wirfileinfo.cc  wirfileinfo.h  wirflowfactref.cc  wirflowfactref.h  wirimmediatedomination.cc  wirimmediatedomination.h  wirliveout.cc  wirliveout.h  wirloopexit.cc  wirloopexit.h  wirreachability.cc  wirreachability.h  wirreachingdefinitions.cc  wirreachingdefinitions.h  wirschedulingconstraint.cc  wirschedulingconstraint.h
WIR/doc/: Footer.html  Makefile.am  Makefile.in  WIR.pptx  doxygen.conf.in
WIR/flowfacts/: Makefile.src  wirentrypoint.cc  wirentrypoint.h  wirflowfact.cc  wirflowfact.h  wirflowfactupdater.cc  wirflowfactupdater.h  wirflowrestriction.cc  wirflowrestriction.h  wirloopbound.cc  wirloopbound.h
WIR/optimizations/: Makefile.src  README
WIR/tests/: Makefile.am  Makefile.in  wirAssert1.cc  wirAssert2.cc  wirAssertT1.cc  wirAssertT2.cc  wirBasicBlock1.cc  wirBasicBlock2.cc  wirBasicBlock3.cc  wirBasicBlock4.cc  wirBasicBlock5.cc  wirBasicBlock6.cc  wirBit1.cc  wirBit2.cc  wirBit3.cc  wirBit4.cc  wirBit5.cc  wirCompilationUnit1.cc  wirCompilationUnit2.cc  wirCompilationUnit3.cc  wirCompilationUnit4.cc  wirContainer1.cc  wirContainer2.cc  wirDFS1.cc  wirDFS2.cc  wirData1.cc  wirEmptyBlocks1.cc  wirFlowFact1.cc  wirFlowFact10.cc  wirFlowFact2.cc  wirFlowFact3.cc  wirFlowFact4.cc  wirFlowFact5.cc  wirFlowFact6.cc  wirFlowFact7.cc  wirFlowFact8.cc  wirFlowFact9.cc  wirFunction1.cc  wirFunction10.cc  wirFunction11.cc  (+98 more)
WIR/wir/: Makefile.src  wir.h  wiraddressingmodeparameter.cc  wiraddressingmodeparameter.h  wirbasecontainer.cc  wirbasecontainer.h  wirbaseimmediateparameter.cc  wirbaseimmediateparameter.h  wirbaseprocessor.cc  wirbaseprocessor.h  wirbaseregister.cc  wirbaseregister.h  wirbasicblock.cc  wirbasicblock.h  wirbus.cc  wirbus.h  wirbusarbitration.cc  wirbusarbitration.h  wircache.cc  wircache.h  wircompilationunit.cc  wircompilationunit.h  wirconditionfieldparameter.cc  wirconditionfieldparameter.h  wircontainer.h  wirdata.cc  wirdata.h  wirdatainit.cc  wirdatainit.h  wirfpbusarbitration.cc  wirfpbusarbitration.h  wirfunction.cc  wirfunction.h  wirimmediateparameter.h  wirinstruction.cc  wirinstruction.h  wirio.cc  wirio.h  wirlabelparameter.cc  wirlabelparameter.h  (+46 more)
arm7/: Makefile.am  Makefile.in  arm_decl.m4  arm_incl.h  arm_prolog.m4  arm_rules.m4  armaddressmodification.cc  armaddressmodification.h  armlvalue.cc  armlvalue.h  assignment_decl.m4  assignment_incl.h  assignment_prolog.m4  assignment_rules.m4  auxfuncs.h  cast.cc  cast.h  casting_decl.m4  casting_incl.h  casting_prolog.m4  casting_rules.m4  composed_decl.m4  composed_incl.h  composed_prolog.m4  composed_rules.m4  composed_struct_bitfield_incl.h  composed_struct_bitfield_prolog.m4  composed_struct_bitfield_rules.m4  cs_arm7.cc  cs_arm7.h  instructionfactory.cc  instructionfactory.h  jump_decl.m4  jump_incl.h  jump_prolog.m4  jump_rules.m4  pointer_decl.m4  pointer_rules.m4  registrar.cc  registrar.h  (+5 more)
rv32/: Makefile.am  Makefile.in  rv32_assignment_decl.m4  rv32_assignment_incl.h  rv32_assignment_prolog.m4  rv32_assignment_rules.m4  rv32_casting_decl.m4  rv32_casting_rules.m4  rv32_composed_rules.m4  rv32_decl.m4  rv32_incl.h  rv32_pointer_decl.m4  rv32_pointer_rules.m4  rv32_prolog.m4  rv32_relation_decl.m4  rv32_relation_incl.h  rv32_relation_prolog.m4  rv32_relation_rules.m4  rv32_rules.m4  rv32addressmodification.cc  rv32addressmodification.h  rv32addresswithoffset.cc  rv32addresswithoffset.h  rv32cast.cc  rv32cast.h  rv32codesel.cc  rv32codesel.h  rv32instructionfactory.cc  rv32instructionfactory.h  rv32lvalue.cc  rv32lvalue.h  rv32registrar.cc  rv32registrar.h  rv32stack.cc  rv32stack.h  rv32symbolinfo.cc  rv32symbolinfo.h  tests.c  tests.s  tpm.m4
tc179x/: Makefile.am  Makefile.in  abs_decl.m4  abs_incl.h  abs_prolog.m4  abs_rules.m4  asmregisterinitializer.cc  asmregisterinitializer.h  assignment_decl.m4  assignment_incl.h  assignment_prolog.m4  assignment_rules.m4  auxfuncs.cc  auxfuncs.h  cast.cc  cast.h  casting_decl.m4  casting_incl.h  casting_prolog.m4  casting_rules.m4  comma_decl.m4  comma_incl.h  comma_prolog.m4  comma_rules.m4  composed_decl.m4  composed_incl.h  composed_initlist_decl.m4  composed_initlist_incl.h  composed_initlist_prolog.m4  composed_initlist_rules.m4  composed_prolog.m4  composed_rules.m4  composed_struct_bitfield_decl.m4  composed_struct_bitfield_incl.h  composed_struct_bitfield_prolog.m4  composed_struct_bitfield_rules.m4  composed_struct_decl.m4  composed_struct_incl.h  composed_struct_prolog.m4  composed_struct_rules.m4  (+39 more)
(+734 files in other folders)
