#
# Targets to build
#

#.SILENT:

check_PROGRAMS		= wirAssert1.bin wirAssert2.bin \
			  wirAssertT1.bin wirAssertT2.bin \
			  wirBasicBlock1.bin wirBasicBlock2.bin \
			  wirBasicBlock3.bin wirBasicBlock4.bin \
			  wirBasicBlock5.bin wirBasicBlock6.bin \
			  wirBit1.bin wirBit2.bin wirBit3.bin wirBit4.bin \
			  wirBit5.bin \
			  wirCompilationUnit1.bin wirCompilationUnit2.bin \
			  wirCompilationUnit3.bin wirCompilationUnit4.bin \
			  wirContainer1.bin wirContainer2.bin \
			  wirDFS1.bin wirDFS2.bin \
			  wirData1.bin \
			  wirEmptyBlocks1.bin \
			  wirFlowFact1.bin wirFlowFact2.bin wirFlowFact3.bin \
			  wirFlowFact4.bin wirFlowFact5.bin wirFlowFact6.bin \
			  wirFlowFact7.bin wirFlowFact8.bin wirFlowFact9.bin \
			  wirFlowFact10.bin \
			  wirFunction1.bin wirFunction2.bin wirFunction3.bin \
			  wirFunction4.bin wirFunction5.bin wirFunction6.bin \
			  wirFunction7.bin wirFunction8.bin wirFunction9.bin \
			  wirFunction10.bin wirFunction11.bin \
			  wirFunction12.bin wirFunction13.bin \
			  wirFunction14.bin \
			  wirInstruction1.bin wirInstruction2.bin \
			  wirInstruction3.bin wirInstruction4.bin \
			  wirLabelParameter1.bin wirLabelParameter2.bin \
			  wirLabelParameter3.bin \
			  wirList1.bin wirList2.bin wirList3.bin wirList4.bin \
			  wirList5.bin wirList6.bin wirList7.bin \
			  wirList10.bin wirList11.bin wirList12.bin \
			  wirList13.bin wirList14.bin wirList15.bin \
			  wirList16.bin \
			  wirOperation1.bin wirOperation2.bin \
			  wirOperation3.bin wirOperation4.bin \
			  wirOperation5.bin wirOperation6.bin \
			  wirOperation7.bin wirOperation8.bin \
			  wirParameter1.bin wirParameter2.bin \
			  wirParameter3.bin wirParameter4.bin \
			  wirParameter5.bin wirParameter6.bin \
			  wirParameter7.bin \
			  wirRedundantBlocks1.bin \
			  wirRegisterParameter1.bin \
			  wirSignedImmediateParameter1.bin \
			  wirStringParameter1.bin \
			  wirStructuralAnalysis1.bin \
			  wirStructuralAnalysis2.bin \
			  wirStructuralAnalysis3.bin \
			  wirStructuralAnalysis4.bin \
			  wirStructuralAnalysis5.bin \
			  wirStructuralAnalysis6.bin \
			  wirStructuralAnalysis7.bin \
			  wirStructuralAnalysis8.bin \
			  wirStructuralAnalysis9.bin \
			  wirStructuralAnalysis10.bin \
			  wirStructuralAnalysis11.bin \
			  wirStructuralAnalysis12.bin \
			  wirStructuralAnalysis13.bin \
			  wirStructuralAnalysis14.bin \
			  wirSymboltable1.bin wirSymboltable2.bin \
			  wirSymboltable3.bin wirSymboltable4.bin \
			  wirSymboltable5.bin wirSymboltable6.bin \
			  wirSymboltable7.bin \
			  wirSystem1.bin wirSystem2.bin wirSystem3.bin \
			  wirSystem4.bin wirSystem5.bin wirSystem6.bin \
			  wirSystem7.bin wirSystem8.bin wirSystem9.bin \
			  wirSystem10.bin \
			  wirUnreachableBlocks1.bin \
			  wirUnsignedImmediateParameter1.bin \
			  wirUnsignedImmediateParameter2.bin \
			  wirUnusedVRegs1.bin \
			  wirUpDownValue1.bin wirUpDownValue2.bin \
			  wirUpDownValue3.bin wirUpDownValue4.bin \
			  wirVirtualRegister1.bin wirVirtualRegister2.bin \
			  wirVirtualRegister3.bin wirVirtualRegister4.bin \
			  wirVirtualRegister5.bin wirVirtualRegister6.bin \
			  wirVirtualRegister7.bin \
			  wirWebs1.bin

failscripts		= wirAssert1.sh wirAssertT1.sh \
			  wirBasicBlock2.sh wirBasicBlock6.sh \
			  wirCompilationUnit2.sh \
			  wirData1.sh \
			  wirFlowFact2.sh wirFlowFact3.sh wirFlowFact4.sh \
			  wirFlowFact5.sh wirFlowFact6.sh \
			  wirFunction3.sh wirFunction4.sh wirFunction5.sh \
			  wirFunction6.sh wirFunction7.sh wirFunction8.sh \
			  wirFunction9.sh wirFunction10.sh wirFunction13.sh \
			  wirInstruction2.sh wirInstruction4.sh \
			  wirLabelParameter2.sh wirLabelParameter3.sh \
			  wirList3.sh wirList4.sh wirList5.sh wirList6.sh \
			  wirList7.sh \
			  wirList12.sh wirList13.sh wirList14.sh wirList15.sh \
			  wirList16.sh \
			  wirOperation2.sh wirOperation3.sh wirOperation4.sh \
			  wirOperation5.sh wirOperation6.sh wirOperation7.sh \
			  wirParameter1.sh wirParameter2.sh wirParameter3.sh \
			  wirParameter4.sh wirParameter5.sh wirParameter6.sh \
			  wirParameter7.sh \
			  wirSymboltable7.sh \
			  wirSystem5.sh wirSystem6.sh wirSystem10.sh \
			  wirUnsignedImmediateParameter2.sh \
			  wirVirtualRegister1.sh wirVirtualRegister2.sh \
			  wirVirtualRegister3.sh wirVirtualRegister4.sh \
			  wirVirtualRegister6.sh wirVirtualRegister7.sh

passscripts		= wirAssert2.sh wirAssertT2.sh \
			  wirBasicBlock1.sh wirBasicBlock3.sh \
			  wirBasicBlock4.sh wirBasicBlock5.sh \
			  wirBit1.sh wirBit2.sh wirBit3.sh wirBit4.sh \
			  wirBit5.sh \
			  wirCompilationUnit1.sh wirCompilationUnit3.sh \
			  wirCompilationUnit4.sh \
			  wirContainer1.sh wirContainer2.sh \
			  wirDFS1.sh wirDFS2.sh \
			  wirEmptyBlocks1.sh \
			  wirFlowFact1.sh wirFlowFact7.sh wirFlowFact8.sh \
			  wirFlowFact9.sh wirFlowFact10.sh \
			  wirFunction1.sh wirFunction2.sh wirFunction11.sh \
			  wirFunction12.sh wirFunction14.sh \
			  wirInstruction1.sh wirInstruction3.sh \
			  wirLabelParameter1.sh \
			  wirList1.sh wirList2.sh \
			  wirList10.sh wirList11.sh \
			  wirOperation1.sh wirOperation8.sh \
			  wirRedundantBlocks1.sh \
			  wirRegisterParameter1.sh \
			  wirSignedImmediateParameter1.sh \
			  wirStringParameter1.sh \
			  wirStructuralAnalysis1.sh wirStructuralAnalysis2.sh \
			  wirStructuralAnalysis3.sh wirStructuralAnalysis4.sh \
			  wirStructuralAnalysis5.sh wirStructuralAnalysis6.sh \
			  wirStructuralAnalysis7.sh wirStructuralAnalysis8.sh \
			  wirStructuralAnalysis9.sh wirStructuralAnalysis10.sh \
			  wirStructuralAnalysis11.sh \
			  wirStructuralAnalysis12.sh \
			  wirStructuralAnalysis13.sh \
			  wirStructuralAnalysis14.sh \
			  wirSymboltable1.sh wirSymboltable2.sh \
			  wirSymboltable3.sh wirSymboltable4.sh \
			  wirSymboltable5.sh wirSymboltable6.sh \
			  wirSystem1.sh wirSystem2.sh wirSystem3.sh \
			  wirSystem4.sh wirSystem7.sh wirSystem8.sh \
			  wirSystem9.sh \
			  wirUnreachableBlocks1.sh \
			  wirUnsignedImmediateParameter1.sh \
			  wirUnusedVRegs1.sh \
			  wirUpDownValue1.sh wirUpDownValue2.sh \
			  wirUpDownValue3.sh wirUpDownValue4.sh \
			  wirVirtualRegister5.sh \
			  wirWebs1.sh

check_SCRIPTS		= $(failscripts) $(passscripts)

XFAIL_TESTS		= $(failscripts)
TESTS			= $(passscripts) $(failscripts)


#
# Source files of the targets
#

CLEANFILES		= $(check_PROGRAMS) $(check_SCRIPTS) core
AM_DEFAULT_SOURCE_EXT   = .cc


#
# Compiler and linker flags
#

LDADD			= $(top_builddir)/libwir.la \
			  @LIBUSEFUL_PREFIX@/libuseful/libuseful.la


#
# Specific rules
#

$(check_SCRIPTS): \
	%.sh: %.bin
	@echo "#!"$(BASH) > $@;
	@echo $(builddir)"/$< > /dev/null 2>&1" >> $@
	@echo "exit ""$$""?" >> $@
	@$(CHMOD) ugo+x $@
